# Tangent

./: .gitignore  LICENSE  package.json  pnpm-lock.yaml  vitest.config.ts
__mocks__/next/: link.tsx
app/: layout.tsx  page.tsx
app/(app)/: layout.tsx  page.tsx
backend/: test_auth.py  test_playlist.py  test_token.py
backend/app/: app_factory.py
backend/migrations/: 000003_create_playlist_songs_table.down.sql  000003_create_playlist_songs_table.up.sql  000004_create_songs_table.up.sql
backend/ml-service/: main.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/ml-service/app/: __init__.py  app_factory.py
backend/ml-service/app/api/: __init__.py
backend/ml-service/app/api/internal/: __init__.py  health.py
backend/ml-service/app/api/router/: __init__.py  generate_songs.py
backend/ml-service/app/api/routers/: __init__.py  generate_songs.py
backend/ml-service/app/core/: __init__.py  exceptions.py  handlers.py  ml_exceptions.py
backend/ml-service/app/middleware/: cors.py  rate_limit.py
backend/ml-service/app/ml/: __init__.py  engine.py  load.py  model.py  song_generator.py
backend/ml-service/notebooks/: 01_eda_and_preprocessing.ipynb  02_knn_engine.ipynb
be/: Dockerfile  pyproject.toml
be/migrations/: 000001_create_user_table.up.sql  000002_create_generated_playlist_table.down.sql  (+4 more)
docs/: handoff.md
fe/: package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json
lib/: types.ts
tests/: design-tokens.test.ts
(+108 files in other folders)
